# identifiers

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel
.devcontainer/: Dockerfile  devcontainer.json
cookies/identifiers/: BUILD.bazel  ctin.proto  iid.proto  meta.proto
cookies/meta/: BUILD.bazel  meta.proto
proto/cookies/identifiers/: BUILD.bazel  ctin.proto
tools/: bazel.rc  config.bzl
