
workspace(
    name = "identifiers",
)

load(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
    "http_file",
)

load(
    "@bazel_tools//tools/build_defs/repo:git.bzl",
    "git_repository",
)

load(
    "//tools:config.bzl",
    "PROTOBUF_VERSION",
    "GRPC_VERSION",
)


http_archive(
    name = "com_google_protobuf",
    sha256 = "c6003e1d2e7fefa78a3039f19f383b4f3a61e81be8c19356f85b6461998ad3db",
    strip_prefix = "protobuf-%s" % PROTOBUF_VERSION,
    urls = ["https://github.com/protocolbuffers/protobuf/archive/v%s.tar.gz" % PROTOBUF_VERSION],
)

http_archive(
    name = "com_google_googleapis",
    sha256 = "dddaf9d842ea99410542be32b67b0dcd1f70181a20b49376bd18a3b802c71bb2",
    strip_prefix = "googleapis-77fada2190156c7022f7f04160594e9bc6e62855",
    urls = ["https://github.com/googleapis/googleapis/archive/77fada2190156c7022f7f04160594e9bc6e62855.tar.gz"],
)

http_archive(
    name = "com_github_grpc_grpc",
    strip_prefix = "grpc-%s" % GRPC_VERSION,
    sha256 = "df488fc6ecdc51bfa026fedb552f23b7cd31ce87d4aa38f676d814903f240062",
    urls = ["https://github.com/grpc/grpc/archive/v%s.zip" % GRPC_VERSION],
)

http_archive(
    name = "io_grpc_proto",
    sha256 = "e0885166fa13ea221fc762fa1cd257424015aa9ee145d761a0519b67ad02fd3e",
    strip_prefix = "grpc-proto-56b02bda9e145da390bc3fb3e2ecc4c4d9e11c06",
    urls = ["https://github.com/grpc/grpc-proto/archive/56b02bda9e145da390bc3fb3e2ecc4c4d9e11c06.tar.gz"],
)

http_archive(
    name = "io_grpc_java",
    sha256 = "85927f857e0b3ad5c4e51c2e6d29213d3e0319f20784aa2113552f71311ba74c",
    strip_prefix = "grpc-java-%s" % GRPC_VERSION,
    urls = ["https://github.com/grpc/grpc-java/archive/v%s.tar.gz" % GRPC_VERSION],
)

http_archive(
    name = "bazel_toolchains",
    sha256 = "5b6eef36e1f627bf739d3212487c7c31e9f19ce68bcb4d672aa11be1bd6bd2ee",
    strip_prefix = "bazel-toolchains-5.1.0",
    urls = [
        "https://github.com/bazelbuild/bazel-toolchains/archive/refs/tags/v5.1.0.tar.gz",
    ],
)

load(
    "@com_google_protobuf//:protobuf_deps.bzl",
    "protobuf_deps",
)

protobuf_deps()
