
package(
    default_visibility = ["//visibility:public"],
)


proto_library(
    name = "ctin_proto",
    srcs = ["ctin.proto"],
    deps = ["//cookies/meta"],
)

alias(name = "CTIN", actual = "ctin_proto")

proto_library(
    name = "iid_proto",
    srcs = ["iid.proto"],
    deps = ["//cookies/meta"],
)

alias(name = "IID", actual = "iid_proto")


proto_library(
    name = "all",
    exports = [
        ":ctin_proto",
        ":iid_proto",
    ]
)

alias(
    name = "identifiers",
    actual = "all",
)
