
package(
    default_visibility = ["//visibility:public"],
)


proto_library(
    name = "meta_proto",
    srcs = ["meta.proto"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

alias(name = "meta", actual = "meta_proto")


proto_library(
    name = "all",
    exports = [
        ":meta_proto",
    ]
)
